recent: Remove audio_root from ARC media source.

audio_root does not support recent document queries. Querying
it will leave a noisy stack trace in Android logcat.

BUG=chromium:767345
TEST=No stack trace in Android logcat

Change-Id: Ia12dfa4c96fd33877f1b5d80c390c53dece0a219
Reviewed-on: https://chromium-review.googlesource.com/676829
Reviewed-by: Tomasz Mikolajewski <mtomasz@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503403}
Former-commit-id: 3ef42f4500b1e5c8581822b84a311303dae6e75b